kubernetes/apps/minio/routes/minio-httproutes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console
  namespace: minio
spec:
  parentRefs:
    - name: kong
      namespace: ingress
      sectionName: https
  hostnames:
    - minio.calcifer.tech
  rules:
    - backendRefs:
        - name: minio-minio-console
          port: 9001
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-s3
  namespace: minio
spec:
  parentRefs:
    - name: kong
      namespace: ingress
      sectionName: https
  hostnames:
    - s3.calcifer.tech
  rules:
    - backendRefs:
        - name: minio-minio
          port: 9000
